--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -14,7 +14,8 @@ variables:
   imageRepository: 'egopythonsamplevscodeflasktutorial'
   containerRegistry: 'p2acrp2.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
-  tag: '$(Build.BuildId)'
+  tagOLD: '$(Build.BuildId)'
+  tag: latest
 
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
@@ -37,4 +38,3 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
-          latest
